--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -18,9 +18,13 @@
     <% @admin_products.each do |admin_product| %>
       <tr>
         <td><%= admin_product.product_name %></td>
-        <td><%= image_tag(admin_product.image, class: "max_img_width")%></td>
+        <% if admin_product.image.attached? == false %>
+          <td><%= image_tag("plh.png", class: "max_img_width") %></td>
+        <% else %>
+          <td><%= image_tag(admin_product.image, class: "max_img_width")%></td>
+        <% end %> 
         <td><%= admin_product.vendor_code %></td>
-        <td><%= admin_product.price %></td>
+        <td><%= admin_product.price %>$</td>
         <td><%= admin_product.description %></td>
         <td><%= link_to 'Show', admin_product %></td>
         <td><%= link_to 'Edit', edit_admin_product_path(admin_product) %></td>
