--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,6 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Admin Products</h1>
+<% if user_signed_in? %>
+  <p> Hello <%= current_user.email%>, you are <%=current_user.role%></p>
+  <%= link_to "sign out", destroy_user_session_path, method: :delete %>
+<% else %>
+  <%= link_to "sign in", new_user_session_path %>
+<% end %> 
+
+<h1>Products</h1>
 
 <table>
   <thead>
@@ -36,4 +43,4 @@
 
 <br>
 
-<%= link_to 'New Admin Product', new_admin_product_path %>
+<%= link_to 'New Product', new_admin_product_path %>
