--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+    <% if user_signed_in? %>
+      <div id="card">
+        <%= render 'cards/card'%>
+      </div>
+    <% end %> 
+
 <h1>Products</h1>
 
 <table>
@@ -35,7 +41,20 @@
         <% end %>
 
         <td><%= link_to 'Show', shop_path(product) %></td>
+
+        <% if user_signed_in? %>
+          <td>
+            <%= form_for @order_item, remote: true do |f|%>
+              <%= f.hidden_field :product_id, :value => product.id %>
+              <%= f.number_field :quantity, :value => 1, :min =>  1%>
+              <%= f.submit "Add to Card "%>
+            <% end %>
+          </td>
+        <% end %>
+
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<%= will_paginate @products %>
