--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+<% if user_signed_in? %>
+  <div id="card">
+    <%= render 'cards/card'%>
+  </div>
+<% end %> 
+
 <p>
   <strong>Product name:</strong>
   <%= @product.product_name %>
@@ -28,5 +34,13 @@
   <strong>Description:</strong>
   <%= @product.description %>
 </p>
+
+<% if user_signed_in? %>
+  <%= form_for @order_item, remote: true do |f|%>
+    <%= f.hidden_field :product_id, :value => @product.id %>
+    <%= f.number_field :quantity, :value => 1, :min =>  1%>
+    <%= f.submit "Add to Card "%>
+  <% end %>
+<% end %>
 
 <%= link_to 'Back', root_path %>
