--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -47,6 +47,7 @@
             <%= form_for @order_item, remote: true do |f|%>
               <%= f.hidden_field :product_id, :value => product.id %>
               <%= f.number_field :quantity, :value => 1, :min =>  1%>
+              <%= f.number_field :user_id, id: :order_item_user_id, value: current_user.id, type: :hidden %>
               <%= f.submit "Add to Card "%>
             <% end %>
           </td>
