creation promo codes with validation (DP9-9), checkout page with validation and mesages (DP9-10), orders list with pagination (DP9-11), orders details with information abou  general info and cart info (DP9-12)

--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -56,4 +56,6 @@
 <br>
 <% if current_user.admin? %>
   <%= link_to 'New Product', new_admin_product_path %>
+  <br>
+  <%= link_to 'Back', root_path %>
 <% end %>
