--- a/app/views/admin/promocodes/show.html.erb
+++ b/app/views/admin/promocodes/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Discount:</strong>
-  <%= @promocode.discount %>
+  <%= @promocode.discount %>%
 </p>
 
 <%= link_to 'Edit', edit_admin_promocode_path(@promocode) %> |
