--- a/app/views/checkouts/index.html.erb
+++ b/app/views/checkouts/index.html.erb
@@ -8,8 +8,8 @@
       <th>Number of order</th>
       <th>Email</th>
       <th>Name</th>
-      <th>Address</th>
       <th>Total price</th>
+      <th>Address</th>
       <th>Pick up</th>
       <th>User id</th>
       <th colspan="3"></th>
@@ -22,8 +22,12 @@
         <td><%= checkout.id %></td>
         <td><%= checkout.email %></td>
         <td><%= checkout.name %></td>
-        <td><%= checkout.address %></td>
-        <td><%= checkout.total_price %></td>
+        <td><%= checkout.total_price %>$</td>
+        <% if checkout.pick_up == true %>
+          <td><%= checkout.address %></td>
+        <% else %>
+          <td> pickup </td>
+        <% end %>
         <td><%= checkout.pick_up %></td>
         <td><%= checkout.user_id %></td>
         <td><%= link_to 'Show', checkout %></td>
@@ -35,7 +39,8 @@
 </table>
 
 <br>
-
-<%= link_to 'New Checkout', new_checkout_path %>
+<%= link_to 'Back', root_path %>
 
 <%= will_paginate @checkouts %>
+
+
