--- a/app/views/checkouts/new.html.erb
+++ b/app/views/checkouts/new.html.erb
@@ -1,7 +1,6 @@
 
 <% @order_items.each do |item| %>
   <h5><%= item.product.product_name %></h5>
-  <h5><%= item.product.price %></h5>
   <% if item.product.image.attached? == false %>
     <%= image_tag("plh.png", class: "max_img_width") %>
   <% else %>
@@ -9,7 +8,7 @@
   <% end %>
   <h5><%= item.product.vendor_code %></h5>
   <h5><%= item.product.description %></h5>
-  <h2>Subtotal: <%= item.total %></h2>
+  <h2>Subtotal: <%= item.total %>$</h2>
 <% end %>
 
 
@@ -25,9 +24,13 @@
         <% end %>
       </ul>
     </div>
-  <% end %> 
+  <% end %>
 
-  <h1>Card subtotal: <%= current_order.subtotal %></h1>
+  <% if current_order.total_price ==  0 %>
+    <h1>Total price: <%= current_order.subtotal %>$</h1>
+  <% else %>
+    <h1>Total price: <%= current_order.total_price %>$</h1>
+  <% end %>
 
   <div class="field">
     <%= form.label :email %>
@@ -48,11 +51,18 @@
   <%= form.label :pick_up, "Pick up order in store"  %>
 
   <%= form.radio_button :pick_up, false%>
-  <%= form.label :pick_up, "have the order delivered", :value => "true" %>
+  <%= form.label :pick_up, "have the order delivered", :value => "true" %> 
 
-  <div class="field">
-    <%= form.text_field :total_price, value: (current_order.subtotal), type: :hidden %>
-  </div>
+  <% if current_order.total_price != 0 %>
+    <div class="field">
+      <%= form.text_field :total_price, value: (current_order.total_price), type: :hidden %>
+    </div>
+  <% else %>
+    <div class="field">
+      <%= form.text_field :total_price, value: (current_order.subtotal), type: :hidden %>
+    </div>
+  <% end %> 
+
 
   <div class="field">
     <%= form.number_field :user_id, id: :checkout_user_id, value: current_user.id, type: :hidden %>
@@ -62,4 +72,5 @@
     <%= form.submit %>
   </div>
 <% end %>
+
 <%= link_to 'Back', checkouts_path %>
