--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,8 @@
   </head>
 
   <body>
+  <%= render "home/header"%>
     <p class="alert"><%= alert %></p>
-    <% if user_signed_in? %>
-      <p> Hello <%= current_user.email%>, you are <%=current_user.role%></p>
-      <%= link_to "sign out", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "sign in", new_user_session_path %>
-    <% end %> 
     <%= yield %>
   </body>
 </html>
