--- a/app/views/cards/_cards_item.html.erb
+++ b/app/views/cards/_cards_item.html.erb
@@ -1,21 +1,36 @@
-<% @order_items.each do |item| %>
-  <h5><%= item.product.product_name %></h5>
-  <h5><%= item.product.price %>$</h5>
-  <% if item.product.image.attached? == false %>
-    <%= image_tag("plh.png", class: "max_img_width") %>
-  <% else %>
-    <%= image_tag(item.product.image, class: "max_img_width")%>
-  <% end %>
-  <h5><%= item.product.vendor_code %></h5>
-  <h5><%= item.product.description %></h5>
+<div class="container">
 
-  <%= form_for item, remote: true do |f| %>
-    <%= f.hidden_field :product_id, :value => item.product.id %>
-    <%= f.number_field :quantity, :value => item.quantity.to_i %>
-    <%= f.submit "Update Card "%>
-    <%= link_to "Remove Items", order_item_path(item), method: :delete, remote: true, data: { confirm: 'Are you sure?' } %>
-  <% end %>
-  <h2>Subtotal: <%= item.total %>$</h2>
+<p id="notice"><%= notice %></p>
+
+<% @order_items.each do |item| %>
+<div class="card mb-5" style="max-width: 640px;">
+  <div class="row g-0">
+    <div class="col-md-5">
+      <% if item.product.image.attached? == false %>
+        <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
+      <% else %>
+        <%= image_tag(item.product.image, class: "img-fluid rounded-start dop") %>
+      <% end %>
+    </div>
+    <div class="col-md-7">
+      <div class="card-body">
+        <h5 class="card-title"><%= item.product.product_name %></h5>
+        <p class="card-text">code: <%= item.product.vendor_code %></p>
+        <h5 class="card-text">price: <%= item.product.price %>$</h5>
+        <p class="card-text"><%= item.product.description %></p>
+      </div>
+    </div>
+    <%= form_for item, :html => {:class => "form-inline"},  remote: true do |f|%>
+      <div class="form-group mx-sm-3 mb-2">
+        <%= f.hidden_field :product_id, :value => item.product.id, class: "form-control" %>
+        <%= f.number_field :quantity, :value => item.quantity.to_i, class: "form-control ml-3"%>
+      </div>
+      <%= f.submit "Update Card", class: "btn btn-primary mb-2 "%>
+      <%= link_to "Remove Items", order_item_path(item), method: :delete, remote: true, data: { confirm: 'Are you sure?' }, class: "btn btn-danger mb-2 ml-2" %>
+    <% end %>
+    <h2 class="ml-4">Subtotal: <%= item.total %>$</h2>
+  </div>
+</div>
 <% end %>
 
 <% if current_order.order_items.size == 0 %>
@@ -31,7 +46,9 @@
   <%= form_with( method: :post,  url: prom_path) do %>
     <%= text_field_tag :promocode %>
     <%= submit_tag "Submit Promocode" %>
-    <%= link_to "Place an order",  new_checkout_path %>
+    <br>
+    <%= link_to "Back",  root_path, class: "btn btn-outline-danger mt-2" %>
+    <%= link_to "Place an order",  new_checkout_path, class: "btn btn-success mt-2" %>
   <% end %>
 <% end %>
-
+</div>
