--- a/app/views/checkouts/new.html.erb
+++ b/app/views/checkouts/new.html.erb
@@ -1,19 +1,47 @@
+<div class="container">
+
+<p id="notice"><%= notice %></p>
 
 <% @order_items.each do |item| %>
-  <h5><%= item.product.product_name %></h5>
-  <% if item.product.image.attached? == false %>
-    <%= image_tag("plh.png", class: "max_img_width") %>
-  <% else %>
-    <%= image_tag(item.product.image, class: "max_img_width")%>
-  <% end %>
-  <h5><%= item.product.vendor_code %></h5>
-  <h5><%= item.product.description %></h5>
-  <h2>Subtotal: <%= item.total %>$</h2>
+<div class="card mb-5" style="max-width: 640px;">
+  <div class="row g-0">
+    <div class="col-md-5">
+      <% if item.product.image.attached? == false %>
+        <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
+      <% else %>
+        <%= image_tag(item.product.image, class: "img-fluid rounded-start dop") %>
+      <% end %>
+    </div>
+    <div class="col-md-7">
+      <div class="card-body">
+        <h5 class="card-title"><%= item.product.product_name %></h5>
+        <p class="card-text">code: <%= item.product.vendor_code %></p>
+        <h5 class="card-text">price: <%= item.product.price %>$</h5>
+        <p class="card-text"><%= item.product.description %></p>
+      </div>
+    </div>
+    <h3 class="ml-4">Subtotal: <%= item.total %>$</h3>
+  </div>
+</div>
 <% end %>
 
+  <% if current_order.total_price ==  0 %>
+    <h1>Total price: <%= current_order.subtotal %>$</h1>
+  <% else %>
+    <h1>Total price: <%= current_order.total_price %>$</h1>
+  <% end %>
+
+<h1>Place an order</h1>
 
 
-<%= form_with model: @checkout do |form| %>
+
+
+
+
+
+
+
+<%= form_with model: @checkout, :html => {:class => "form-group"} do |form| %>
   <% if @checkout.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@checkout.errors.count, "error") %> prohibited this checkout from being saved:</h2>
@@ -26,25 +54,19 @@
     </div>
   <% end %>
 
-  <% if current_order.total_price ==  0 %>
-    <h1>Total price: <%= current_order.subtotal %>$</h1>
-  <% else %>
-    <h1>Total price: <%= current_order.total_price %>$</h1>
-  <% end %>
-
   <div class="field">
     <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.text_field :email, class: "form-control max" %>
   </div>
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class: "form-control max" %>
   </div>
 
   <div class="field">
     <%= form.label :address %>
-    <%= form.text_field :address %>
+    <%= form.text_field :address, class: "form-control max" %>
   </div>
 
   <%= form.radio_button :pick_up, true, :checked => true  %>
@@ -68,9 +90,13 @@
     <%= form.number_field :user_id, id: :checkout_user_id, value: current_user.id, type: :hidden %>
   </div>
 
+  <%= link_to "Back",  cards_path, class: "btn btn-outline-danger mt-2" %>
+
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Create checkout", class:"btn btn-success"%>
   </div>
 <% end %>
 
-<%= link_to 'Back', checkouts_path %>
+
+</div>
+
