--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,63 +1,47 @@
+<div class="container">
+
 <p id="notice"><%= notice %></p>
 
-<% if user_signed_in? %>
-  <div id="card">
-    <%= render 'cards/card'%>
-  </div>
-<% end %> 
-
-<h1>Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Product name</th>
-      <th>Image</th>
-      <th>Vendor code</th>
-      <th>Price</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.product_name %></td>
-
-        <% if product.image.attached? == false %>
-          <td><%= image_tag("plh.png", class: "max_img_width") %></td>
-        <% else %>
-          <td><%= image_tag(product.image, class: "max_img_width")%></td>
-        <% end %> 
-
-        <td><%= product.vendor_code %></td>
-        <td><%= product.price %>$</td>
-        
-        <% if product.description.empty?%>
-          <td><p>This product has no description</p></td>
-        <% else %>
-          <td><%= product.description %></td>
-        <% end %>
-
-        <td><%= link_to 'Show', shop_path(product) %></td>
-
-        <% if user_signed_in? %>
-          <td>
-            <%= form_for @order_item, remote: true do |f|%>
-              <%= f.hidden_field :product_id, :value => product.id %>
-              <%= f.number_field :quantity, :value => 1, :min =>  1%>
-              <%= f.number_field :user_id, id: :order_item_user_id, value: current_user.id, type: :hidden %>
-              <%= f.submit "Add to Card "%>
-            <% end %>
-          </td>
-        <% end %>
-
-      </tr>
+<% @products.each do |product| %>
+<div class="card mb-5" style="max-width: 640px;">
+  <div class="row g-0">
+    <div class="col-md-5">
+    <% if product.image.attached? == false %>
+      <%= link_to shop_path(product) do %> 
+        <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
+      <% end %>
+    <% else %>
+      <%= link_to shop_path(product) do %>
+        <%= image_tag(product.image, class: "img-fluid rounded-start dop") %>
+      <% end %>
     <% end %>
-  </tbody>
-</table>
+    </div>
+    <div class="col-md-7">
+      <div class="card-body">
+        <h5 class="card-title"><%= product.product_name %></h5>
+        <p class="card-text">code: <%= product.vendor_code %></p>
+        <h5 class="card-text"><%= product.price %>$</h5>
+        <td><%= link_to 'Show', shop_path(product) %></td>
+      </div>
+    </div>
+
+    
+     <% if user_signed_in? %>
+            <%= form_for @order_item, :html => {:class => "form-inline"},  remote: true do |f|%>
+            <div class="form-group mx-sm-3 mb-2">
+              <%= f.hidden_field :product_id, :value => product.id, class: "form-control" %>
+              <%= f.number_field :quantity, :value => 1, :min =>  1, class: "form-control ml-3"%>
+              <%= f.number_field :user_id, id: :order_item_user_id, value: current_user.id, type: :hidden %>
+              </div>
+              <%= f.submit "Add to Card ", class: "btn btn-primary mb-2"%>
+            <% end %>
+     
+        <% end %>
+   
+  </div>
+</div>
+
+<% end %>
 
 <%= will_paginate @products %>
-
-<%= link_to 'All orders', all_orders_path %>
+</div>
