--- a/app/views/shops/orders.html.erb
+++ b/app/views/shops/orders.html.erb
@@ -1,40 +1,42 @@
-<% unless @check.size == 0 %>
-<h1>My checkouts</h1>
+<% if @check.size == 0 %>
+  <h3>You have no orders</h3>
+<% else %>
+  <h1>My checkouts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Number of order</th>
-      <th>Email</th>
-      <th>Name</th>
-      <th>Total price</th>
-      <th>Address</th>
-      <th>Pick up</th>
-      <th>User id</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @check.each do |checkout| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= checkout.id %></td>
-        <td><%= checkout.email %></td>
-        <td><%= checkout.name %></td>
-        <td><%= checkout.total_price %>$</td>
-        <% if checkout.pick_up == true %>
-          <td><%= checkout.address %></td>
-        <% else %>
-          <td> pickup </td>
-        <% end %>
-        <td><%= checkout.pick_up %></td>
-        <td><%= checkout.user_id %></td>
-        <td><%= link_to 'Show', checkout %></td>
-        <td><%= link_to 'Edit', edit_checkout_path(checkout) %></td>
-        <td><%= link_to 'Destroy', checkout, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Number of order</th>
+        <th>Email</th>
+        <th>Name</th>
+        <th>Total price</th>
+        <th>Address</th>
+        <th>Pick up</th>
+        <th>User id</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @check.each do |checkout| %>
+        <tr>
+          <td><%= checkout.id %></td>
+          <td><%= checkout.email %></td>
+          <td><%= checkout.name %></td>
+          <td><%= checkout.total_price %>$</td>
+          <% if checkout.pick_up == true %>
+            <td><%= checkout.address %></td>
+          <% else %>
+            <td> pickup </td>
+          <% end %>
+          <td><%= checkout.pick_up %></td>
+          <td><%= checkout.user_id %></td>
+          <td><%= link_to 'Show', checkout %></td>
+          <td><%= link_to 'Edit', edit_checkout_path(checkout) %></td>
+          <td><%= link_to 'Destroy', checkout, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 <% end %>
-<p><%= link_to 'Back', root_path %></p>
+<%= link_to "Back",  root_path, class: "btn btn-outline-danger mt-2" %>
