--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,46 +1,45 @@
+
+<div class="container">
+
 <p id="notice"><%= notice %></p>
 
-<% if user_signed_in? %>
-  <div id="card">
-    <%= render 'cards/card'%>
+
+<div class="card mb-5" style="max-width: 640px;">
+  <div class="row g-0">
+    <div class="col-md-5">
+    <% if @product.image.attached? == false %>
+      <%= link_to shop_path(@product) do %> 
+        <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
+      <% end %>
+    <% else %>
+      <%= link_to shop_path(@product) do %>
+        <%= image_tag(@product.image, class: "img-fluid rounded-start dop") %>
+      <% end %>
+    <% end %>
+    </div>
+    <div class="col-md-7">
+      <div class="card-body">
+        <h5 class="card-title"><%= @product.product_name %></h5>
+        <p class="card-text">code: <%= @product.vendor_code %></p>
+        <h5 class="card-text"><%= @product.price %>$</h5>
+        <h5 class="card-text"><%= @product.description %></h5>
+      </div>
+    </div>
+
+    
+     <% if user_signed_in? %>
+            <%= form_for @order_item, :html => {:class => "form-inline"},  remote: true do |f|%>
+            <div class="form-group mx-sm-3 mb-2">
+              <%= f.hidden_field :product_id, :value => @product.id, class: "form-control" %>
+              <%= f.number_field :quantity, :value => 1, :min =>  1, class: "form-control ml-3"%>
+              <%= f.number_field :user_id, id: :order_item_user_id, value: current_user.id, type: :hidden %>
+              </div>
+              <%= f.submit "Add to Card ", class: "btn btn-primary mb-2"%>
+            <% end %>
+     
+        <% end %>
+   
   </div>
-<% end %> 
+</div>
 
-<p>
-  <strong>Product name:</strong>
-  <%= @product.product_name %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <% if @product.image.attached? == false %>
-    <td><%= image_tag("plh.png", class: "max_img_width") %></td>
-  <% else %>
-    <td><%= image_tag(@product.image, class: "max_img_width")%></td>
-  <% end %>
-</p>
-
-<p>
-  <strong>Vendor code:</strong>
-  <%= @product.vendor_code %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>$
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<% if user_signed_in? %>
-  <%= form_for @order_item, remote: true do |f|%>
-    <%= f.hidden_field :product_id, :value => @product.id %>
-    <%= f.number_field :quantity, :value => 1, :min =>  1%>
-    <%= f.submit "Add to Card "%>
-  <% end %>
-<% end %>
-
-<%= link_to 'Back', root_path %>
+</div>
