--- a/app/views/checkouts/show.html.erb
+++ b/app/views/checkouts/show.html.erb
@@ -52,11 +52,7 @@
 </div>
 <% end %>
 
-  <% if current_order.total_price ==  0 %>
-    <h1>Total price: <%= current_order.subtotal %>$</h1>
-  <% else %>
-    <h1>Total price: <%= current_order.total_price %>$</h1>
-  <% end %>
+<h1>Total price: <%= @checkout.total_price %>$</h1>
 
 <% if current_user.user? %>
   <%= link_to "Back",  root_path, class: "btn btn-outline-danger mt-2" %>
