--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" bg-light style="background-color: #e3f2fd;">
-  
+<nav class="navbar navbar-expand-lg navbar-light" bg-light style="background-color: #efefef;">
   <%= link_to 'Online Store', root_path, class: "navbar-brand" %></
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
