--- a/app/views/checkouts/index.html.erb
+++ b/app/views/checkouts/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Checkouts</h1>
 
 <table>
@@ -41,6 +39,6 @@
 <br>
 <%= link_to 'Back', root_path %>
 
-<%= will_paginate @checkouts %>
+<%= will_paginate @checkouts, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
 
 
