--- a/app/views/checkouts/new.html.erb
+++ b/app/views/checkouts/new.html.erb
@@ -1,102 +1,94 @@
 <div class="container">
+  <div class="marl">
+    <p id="notice"><%= notice %></p>
 
-<p id="notice"><%= notice %></p>
+    <%= form_with model: @checkout, :html => {:class => "form-group"} do |form| %>
+      <% if @checkout.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@checkout.errors.count, "error") %> prohibited this checkout from being saved:</h2>
 
-<% @order_items.each do |item| %>
-<div class="card mb-5" style="max-width: 640px;">
-  <div class="row g-0">
-    <div class="col-md-5">
-      <% if item.product.image.attached? == false %>
-        <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
-      <% else %>
-        <%= image_tag(item.product.image, class: "img-fluid rounded-start dop") %>
+          <ul>
+            <% @checkout.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
       <% end %>
-    </div>
-    <div class="col-md-7">
-      <div class="card-body">
-        <h5 class="card-title"><%= item.product.product_name %></h5>
-        <p class="card-text">code: <%= item.product.vendor_code %></p>
-        <h5 class="card-text">price: <%= item.product.price %>$</h5>
-        <p class="card-text"><%= item.product.description %></p>
+
+        <h3>Enter your details to place an order</h3>
+      <div class="field">
+        <%= form.label :email %>
+        <%= form.text_field :email, class: "form-control max" %>
+      </div>
+
+      <div class="field">
+        <%= form.label :name %>
+        <%= form.text_field :name, class: "form-control max" %>
+      </div>
+
+      <div class="field">
+        <%= form.label :address %>
+        <%= form.text_field :address, class: "form-control max" %>
+      </div>
+
+      <%= form.radio_button :pick_up, true, :checked => true  %>
+      <%= form.label :pick_up, "Pick up order in store"  %>
+
+      <%= form.radio_button :pick_up, false%>
+      <%= form.label :pick_up, "have the order delivered", :value => "true" %> 
+
+      <% if current_order.total_price != 0 %>
+        <div class="field">
+          <%= form.text_field :total_price, value: (current_order.total_price), type: :hidden %>
+        </div>
+      <% else %>
+        <div class="field">
+          <%= form.text_field :total_price, value: (current_order.subtotal), type: :hidden %>
+        </div>
+      <% end %> 
+
+
+      <div class="field">
+        <%= form.number_field :user_id, id: :checkout_user_id, value: current_user.id, type: :hidden %>
+      </div>
+
+      <%= link_to "Back",  cards_path, class: "btn btn-outline-danger mt-2 mb-2" %>
+
+      <div class="actions">
+        <%= form.submit "Create checkout", class:"btn btn-success"%>
+      </div>
+    <% end %>
+
+    <h4>Card info:</h4>
+    <% @order_items.each do |item| %>
+    <div class="card mb-3" style="max-width: 640px;">
+      <div class="row g-0">
+        <div class="col-md-5">
+          <% if item.product.image.attached? == false %>
+            <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
+          <% else %>
+            <%= image_tag(item.product.image, class: "img-fluid rounded-start dop") %>
+          <% end %>
+        </div>
+        <div class="col-md-7">
+          <div class="card-body">
+            <h5 class="card-title"><%= item.product.product_name %></h5>
+            <p class="card-text">code: <%= item.product.vendor_code %></p>
+            <h5 class="card-text">price: <%= item.product.price %>$</h5>
+            <p class="card-text"><%= item.product.description %></p>
+          </div>
+        </div>
+        <h3 class="ml-4">Subtotal: <%= item.total %>$</h3>
       </div>
     </div>
-    <h3 class="ml-4">Subtotal: <%= item.total %>$</h3>
+    <% end %>
+    <% if current_order.total_price ==  0 %>
+      <h1>Total price: <%= current_order.subtotal %>$</h1>
+    <% else %>
+      <h1>Total price: <%= current_order.total_price %>$</h1>
+    <% end %>
   </div>
 </div>
-<% end %>
-
-  <% if current_order.total_price ==  0 %>
-    <h1>Total price: <%= current_order.subtotal %>$</h1>
-  <% else %>
-    <h1>Total price: <%= current_order.total_price %>$</h1>
-  <% end %>
-
-<h1>Place an order</h1>
 
 
-
-
-
-
-
-
-
-<%= form_with model: @checkout, :html => {:class => "form-group"} do |form| %>
-  <% if @checkout.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@checkout.errors.count, "error") %> prohibited this checkout from being saved:</h2>
-
-      <ul>
-        <% @checkout.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email, class: "form-control max" %>
-  </div>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, class: "form-control max" %>
-  </div>
-
-  <div class="field">
-    <%= form.label :address %>
-    <%= form.text_field :address, class: "form-control max" %>
-  </div>
-
-  <%= form.radio_button :pick_up, true, :checked => true  %>
-  <%= form.label :pick_up, "Pick up order in store"  %>
-
-  <%= form.radio_button :pick_up, false%>
-  <%= form.label :pick_up, "have the order delivered", :value => "true" %> 
-
-  <% if current_order.total_price != 0 %>
-    <div class="field">
-      <%= form.text_field :total_price, value: (current_order.total_price), type: :hidden %>
-    </div>
-  <% else %>
-    <div class="field">
-      <%= form.text_field :total_price, value: (current_order.subtotal), type: :hidden %>
-    </div>
-  <% end %> 
-
-
-  <div class="field">
-    <%= form.number_field :user_id, id: :checkout_user_id, value: current_user.id, type: :hidden %>
-  </div>
-
-  <%= link_to "Back",  cards_path, class: "btn btn-outline-danger mt-2" %>
-
-  <div class="actions">
-    <%= form.submit "Create checkout", class:"btn btn-success"%>
-  </div>
-<% end %>
-
-
-</div>
 
