--- a/app/views/checkouts/show.html.erb
+++ b/app/views/checkouts/show.html.erb
@@ -1,64 +1,46 @@
 <div class="container">
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Number of order:</strong>
-  <%= @checkout.id %>
-</p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @checkout.name %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @checkout.email %>
-</p>
-
-<% if @checkout.pick_up == true %>
-  <p>
-    <strong>Address:</strong>
-    <%= @checkout.address %>
-  </p>
-<% end %>
-
-<p>
-  <strong>Pick up:</strong>
-  <%= @checkout.pick_up %>
-</p>
-
-<% @order_items.each do |item| %>
-<div class="card mb-5" style="max-width: 640px;">
-  <div class="row g-0">
-    <div class="col-md-5">
-      <% if item.product.image.attached? == false %>
-        <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
-      <% else %>
-        <%= image_tag(item.product.image, class: "img-fluid rounded-start dop") %>
+  <div class="marl">
+    <ul class="list-group mb-3"style="max-width: 640px;">
+      <li class="list-group-item">Number of order: <%= @checkout.id %></li>
+      <li class="list-group-item">Name: <%= @checkout.name %></li>
+      <li class="list-group-item">Email: <%= @checkout.email %></li>
+      <li class="list-group-item">Pick up: <%= @checkout.pick_up %></li>
+      <% if @checkout.pick_up == true %>
+        <li class="list-group-item">Address:  <%= @checkout.address %></li>
       <% end %>
-    </div>
-    <div class="col-md-7">
-      <div class="card-body">
-        <h5 class="card-title"><%= item.product.product_name %></h5>
-        <p class="card-text">Code: <%= item.product.vendor_code %></p>
-        <p class="card-text">Total price per 1 product: <%= item.product.price %>$</p>
-        <p class="card-text">Quantity: <%= item.quantity %></p>
-        <h2>Subtotal: <%= item.total %>$</h2>
+    </ul>
+    
+    <% @order_items.each do |item| %>
+    <div class="card mb-5" style="max-width: 640px;">
+      <div class="row g-0">
+        <div class="col-md-5">
+          <% if item.product.image.attached? == false %>
+            <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
+          <% else %>
+            <%= image_tag(item.product.image, class: "img-fluid rounded-start dop") %>
+          <% end %>
+        </div>
+        <div class="col-md-7">
+          <div class="card-body">
+            <h5 class="card-title"><%= item.product.product_name %></h5>
+            <p class="card-text">Code: <%= item.product.vendor_code %></p>
+            <p class="card-text">Total price per 1 product: <%= item.product.price %>$</p>
+            <p class="card-text">Quantity: <%= item.quantity %></p>
+            <h2>Subtotal: <%= item.total %>$</h2>
+          </div>
+        </div>
       </div>
     </div>
-    
+    <% end %>
+
+    <h1>Total price: <%= @checkout.total_price %>$</h1>
+
+    <% if current_user.user? %>
+      <%= link_to "Back",  root_path, class: "btn btn-outline-danger mt-2" %>
+    <% else %>
+      <%= link_to "Back",  admin_path, class: "btn btn-outline-danger mt-2" %>
+    <% end %>
   </div>
-</div>
-<% end %>
-
-<h1>Total price: <%= @checkout.total_price %>$</h1>
-
-<% if current_user.user? %>
-  <%= link_to "Back",  root_path, class: "btn btn-outline-danger mt-2" %>
-<% else %>
-  <%= link_to "Back",  admin_path, class: "btn btn-outline-danger mt-2" %>
-<% end %>
 </div>
 
 
