--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,16 @@
   </head>
 
   <body>
-  <%= render "home/header"%>
-    <p class="alert"><%= alert %></p>
+    <%= render "home/header"%>
+    <% flash.each do |key, message| %>
+      <div class="alert <%= flash_class(key) %> alert-dismissible fade show text-center" role="alert">
+        <%= message %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    <% end %>
     <%= yield %>
+    <%= render "home/footer"%>
   </body>
 </html>
