Fixed problem with creating a new session, added styles for forms and bootstrap for admin, changed styles on checkout and cart pages

--- a/app/views/admin/homepage/index.html.erb
+++ b/app/views/admin/homepage/index.html.erb
@@ -1,4 +1,6 @@
-<table>
+<h1 class="text-center">Users</h1>
+
+<table class="table">
   <thead>
     <tr>
       <th>User Id</th>
@@ -19,9 +21,9 @@
 </table>
 
 <br>
-<%= link_to 'Products', admin_products_path %>
-<%= link_to 'Checkouts', checkouts_path %>
-<%= link_to 'Promocodes', admin_promocodes_path %>
+<%= link_to 'Products', admin_products_path, class: "btn btn-primary" %>
+<%= link_to 'Checkouts', checkouts_path, class: "btn btn-primary" %>
+<%= link_to 'Promocodes', admin_promocodes_path, class: "btn btn-primary" %>
 
 
 
