--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,31 +1,30 @@
-<p>
-  <strong>Product name:</strong>
-  <%= @product.product_name %>
-</p>
 
-<p>
-  <strong>Image:</strong>
-  <% if @product.image.attached? == false %>
-    <td><%= image_tag("plh.png", class: "max_img_width") %></td>
-  <% else %>
-    <td><%= image_tag(@product.image, class: "max_img_width")%></td>
-  <% end %>
-</p>
+<div class="container">
+  <div class="marl">
+    <ul class="list-group mb-3"style="max-width: 640px;">
+     <div class="card mb-5" style="max-width: 640px;">
+      <div class="row g-0">
+        <div class="col-md-5">
+          <% if @product.image.attached? == false %>
+            <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
+          <% else %>
+            <%= image_tag(@product.image, class: "img-fluid rounded-start dop") %>
+          <% end %>
+        </div>
+        <div class="col-md-7">
+          <div class="card-body">
+            <h5 class="card-title list-group-item">Product name:<%=  @product.product_name %></h5>
+            <p class="card-text list-group-item">Product code: <%=  @product.vendor_code %></p>
+            <p class="card-text list-group-item">Product price:<%=  @product.price %>$</p>
+            <p class="card-text list-group-item">Product description:<%=  @product.description %></p>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+    <%= link_to 'Edit', edit_admin_product_path(@product), class: "btn btn-outline-primary mt-2 mb-3" %>
+    <%= link_to 'Back', admin_products_path, class: "btn btn-outline-danger mt-2 mb-3" %>
+  </div>
+</div>
 
-<p>
-  <strong>Vendor code:</strong>
-  <%= @product.vendor_code %>
-</p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>$
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<%= link_to 'Edit', edit_admin_product_path(@product) %> |
-<%= link_to 'Back', admin_products_path %>
