--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -1,4 +1,5 @@
-<footer class="bg-light text-center text-white">
+<footer id="footer", class="bg-light text-center">
+  <h4>Our partners</h4>
   <div class="container p-4 pb-0">
 
     <%= image_tag("smsng.png", class: "max_img_partner") %>
