--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,57 +9,69 @@ $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 
 @import url(http://fonts.googleapis.com/css?family=Calibri:400,300,700);
 
-body {
-    background-color: #eee;
-    font-family: 'Calibri', sans-serif !important
+
+body{
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #eee;
+  font-family: 'Calibri', sans-serif !important
 }
 
+.for_footer{
+  flex-grow: 1;
+}
+ 
+footer{
+ flex-grow: 0;
+}
 .mt-100 {
-    margin-top: 100px
+  margin-top: 100px
 }
 
 .max_img_partner{
-  max-width: 150px;
+  max-width: 110px;
+}
+
+.max_img_width{
+  max-width: 110px;
 }
 
 .card {
-    margin-bottom: 30px;
-    border: 0;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
-    letter-spacing: .5px;
-    border-radius: 8px;
-    -webkit-box-shadow: 1px 5px 24px 0 rgba(68, 102, 242, .05);
-    box-shadow: 1px 5px 24px 0 rgba(68, 102, 242, .05)
+  margin-bottom: 30px;
+  border: 0;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  letter-spacing: .5px;
+  border-radius: 8px;
+  -webkit-box-shadow: 1px 5px 24px 0 rgba(68, 102, 242, .05);
+  box-shadow: 1px 5px 24px 0 rgba(68, 102, 242, .05)
 }
 
 .card .card-header {
-    background-color: #fff;
-    border-bottom: none;
-    padding: 24px;
-    border-bottom: 1px solid #f6f7fb;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px
+  background-color: #fff;
+  border-bottom: none;
+  padding: 24px;
+  border-bottom: 1px solid #f6f7fb;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px
 }
 
 .card-header:first-child {
-    border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0
+  border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0
 }
 
 .card .card-body {
-    padding: 30px;
-    background-color: transparent
+  padding: 30px;
+  background-color: transparent
 }
 
 .btn-primary,
 .btn-primary.disabled,
 .btn-primary:disabled {
-    background-color: #4466f2 !important;
-    border-color: #4466f2 !important
-}
-
-footer{
-  margin-top: 40px;
+  background-color: #4466f2 !important;
+  border-color: #4466f2 !important
 }
 
 .alert-dismissible {
@@ -72,7 +84,7 @@ footer{
 
 .cont {
   position: absolute;
-  left: 40%;
+  left: 45%;
 }
 
 .dop{
@@ -183,9 +195,10 @@ footer{
 .slider_img{
   background: linear-gradient(to top, #fce38a, #f38181);
   transition: transform .4s;
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
   border-radius: 30px;
+  margin-left: 40px;
   }
 .slider_img img{
   transition: opacity .4s ;
@@ -214,30 +227,30 @@ footer{
 }
 
 .info{
-    background-color: #95e1d3;
-    display: flex;
-    margin: 40px 0 40px 0;
+  background-color: #95e1d3;
+  display: flex;
+  margin: 40px 0 40px 0;
 }
 
 .inf_item{
-    flex: 1 1 0;
-    border-left: 1px solid #b5eae0;
-    padding: 85px 0;
-    text-align: center
+  flex: 1 1 0;
+  border-left: 1px solid #b5eae0;
+  padding: 85px 0;
+  text-align: center
 }
 .inf_item:last-child{
-    border-right: 1px solid #b5eae0;
+  border-right: 1px solid #b5eae0;
 }
 .numbers{
-    font-weight: 700;
-    font-size: 72px;
-    color: #fff;
-    padding-bottom: 10px;
+  font-weight: 700;
+  font-size: 72px;
+  color: #fff;
+  padding-bottom: 10px;
 }
 .letters{
-    font-size: 14px;
-    color: #fff;
-    text-transform: uppercase;
+  font-size: 14px;
+  color: #fff;
+  text-transform: uppercase;
 }
 .work{
   text-align: center;
