--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [:admin, product]) do |form| %>
+<%= form_with(model: [:admin, product], :html => {:class => "form-group"}) do |form| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -11,32 +11,47 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field mb-3">
     <%= form.label :product_name %>
-    <%= form.text_field :product_name %>
+    <%= form.text_field :product_name, class: "form-control max" %>
+    <small class="text-muted">
+      Must be 2-500 characters long.
+    </small>
   </div>
 
-  <div class="field">
-    <%= form.label :image %>
-    <%= form.file_field :image %>
-  </div>
-
-  <div class="field">
+  <div class="field mb-3">
     <%= form.label :vendor_code %>
-    <%= form.text_area :vendor_code %>
+    <%= form.text_area :vendor_code, class: "form-control max" %>
+    <small class="text-muted">
+      Must be 7 characters long.
+    </small>
   </div>
 
-  <div class="field">
+  <div class="field mb-3">
     <%= form.label :price %>
-    <%= form.text_field :price %>
+    <%= form.text_field :price, class: "form-control max" %>
+    <small class="text-muted">
+      Must be 1-7 characters long.
+    </small>
   </div>
 
-  <div class="field">
+  <div class="field mb-3">
     <%= form.label :description %>
-    <%= form.text_area :description %>
+    <%= form.text_area :description, class: "form-control max" %>
+    <small class="text-muted">
+      Must be 0-5000 characters long.
+    </small>
+  </div>
+
+   <div class="field mb-3">
+    <%= form.label :image %>
+    <%= form.file_field :image, class: "form-control-file mb-3" %>
+    <small class="text-muted">
+      Must be a JPEG,JPG or PNG.
+    </small>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.button "Сomplete", type: "submit", :class=> "btn btn-primary" %>
   </div>
 <% end %>
