--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Product</h1>
+<div class="container">
+  <div class="marl">
+    <h1>New Product</h1>
+    <%= render 'form', product: @product %>
+    <%= link_to 'Back', admin_products_path, class: "btn btn-outline-danger mt-2 mb-3" %>
+  </div>
+</div>
 
-<%= render 'form', product: @product %>
 
-<%= link_to 'Back', admin_products_path %>
