--- a/app/views/admin/promocodes/edit.html.erb
+++ b/app/views/admin/promocodes/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Promocode</h1>
-
-<%= render 'form', promocode: @promocode %>
-
-<%= link_to 'Show', admin_promocode_path(@promocode) %> |
-<%= link_to 'Back', admin_promocodes_path %>
+<div class="container">
+  <div class="marl">
+    <h1>Editing Promocode</h1>
+    <%= render 'form', promocode: @promocode %>
+    <%= link_to 'Show', admin_promocode_path(@promocode), class: "btn btn-outline-primary mt-2 mb-3" %> |
+    <%= link_to 'Back', admin_promocodes_path, class: "btn btn-outline-danger mt-2 mb-3" %>
+  </div>
+</div>
