--- a/app/views/admin/promocodes/new.html.erb
+++ b/app/views/admin/promocodes/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Promocode</h1>
-
-<%= render 'form', promocode: @promocode %>
-
-<%= link_to 'Back', admin_promocodes_path %>
+<div class="container">
+  <div class="marl">
+    <h1>New Promocode</h1>
+    <%= render 'form', promocode: @promocode %>
+    <%= link_to 'Back', admin_promocodes_path, class: "btn btn-outline-danger mt-2 mb-3" %>
+  </div>
+</div>
