--- a/app/views/cards/_cards_item.html.erb
+++ b/app/views/cards/_cards_item.html.erb
@@ -13,9 +13,10 @@
           <div class="col-md-7">
             <div class="card-body">
               <h5 class="card-title"><%= item.product.product_name %></h5>
-              <p class="card-text">code: <%= item.product.vendor_code %></p>
+              <h5 class="card-text">code: <%= item.product.vendor_code %></h5>
               <h5 class="card-text">price: <%= item.product.price %>$</h5>
-              <p class="card-text"><%= item.product.description %></p>
+              <h5 class="card-text"><%= item.product.description %></h5>
+              <h5 class="card-text">Quantity: <%= item.quantity %></h5>
             </div>
           </div>
           <%= form_for item, :html => {:class => "form-inline"},  remote: true do |f|%>
@@ -56,8 +57,8 @@
         <%= text_field_tag :promocode %>
         <%= submit_tag "Submit Promocode", class: "btn btn-success" %>
         <br>
-        <%= link_to "Back",  root_path, class: "btn btn-outline-danger mt-2" %>
-        <%= link_to "Place an order",  new_checkout_path, class: "btn btn-success mt-2" %>
+        <%= link_to "Back",  root_path, class: "btn btn-outline-danger mt-2 mb-3" %>
+        <%= link_to "Place an order",  new_checkout_path, class: "btn btn-success mt-2 mb-3" %>
       <% end %>
     <% end %>
   </div>
