--- a/app/views/checkouts/show.html.erb
+++ b/app/views/checkouts/show.html.erb
@@ -36,9 +36,9 @@
     <h1>Total price: <%= @checkout.total_price %>$</h1>
 
     <% if current_user.user? %>
-      <%= link_to "Back",  root_path, class: "btn btn-outline-danger mt-2" %>
+      <%= link_to "Back",  root_path, class: "btn btn-outline-danger mt-2 mb-3" %>
     <% else %>
-      <%= link_to "Back",  admin_path, class: "btn btn-outline-danger mt-2" %>
+      <%= link_to "Back",  admin_path, class: "btn btn-outline-danger mt-2 mb-3" %>
     <% end %>
   </div>
 </div>
