--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
         </button>
       </div>
     <% end %>
-    <%= yield %>
+    <div class="for_footer">
+      <%= yield %>
+    </div>
     <%= render "home/footer"%>
   </body>
 </html>
