--- a/app/views/shops/orders.html.erb
+++ b/app/views/shops/orders.html.erb
@@ -1,7 +1,7 @@
 <% if @check.size == 0 %>
   <h3>You have no orders</h3>
 <% else %>
-  <h1>My checkouts</h1>
+  <h1 class="text-center">My checkouts</h1>
 
   <table class="table">
     <thead>
@@ -31,8 +31,8 @@
           <% end %>
           <td><%= checkout.pick_up %></td>
           <td><%= checkout.user_id %></td>
-          <td><%= link_to 'Show', checkout %></td>
-          <td><%= link_to 'Destroy', checkout, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Show', checkout, class: "btn btn-outline-primary mt-2" %></td>
+          <td><%= link_to 'Destroy', checkout, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger mt-2" %></td>
         </tr>
       <% end %>
     </tbody>
